<resources>
    <string name="app_name">VehicleState</string>
    
    
    <string name="battery_motor">电池和电机</string>
    <string name="speed_energy_consumption">速度和能耗</string>
    <string name="car_information">车辆信息</string>
    <string name="charging_pile_parking">电桩停车场</string>
    <string name="smart_parking">智能停车</string>
    <string name="driving_rating">驾驶评价</string>
    <string name="driving_playback">驾驶轨迹</string>

    <string name="battery_power">电池电量</string>
    <string name="recharge_mileage">续航里程:%s KM</string>

    <string name="energy_consumption">能耗</string>
    <string name="temperature">温度</string>
    <string name="voltage">压力</string>
    <string name="health_degree">健康度</string>
    <string name="charge">充电</string>


    <string name="km_10">10km</string>
    <string name="km_50">50km</string>
    <string name="km_100">100km</string>

    <string name="motor_temperature">电机温度</string>
    <string name="battery_temperature">电池温度</string>
    <string name="motor_control_temperature">电机控制器温度</string>
    <string name="charge_motor_temperature">充电机温度</string>

    <string name="battery_health_degree">电池健康度：%s</string>

</resources>
